intTests/test_parse_errors/parser011.log.good
Loading file "parser011.saw"
parser011.saw:7:1-7:20: Error: Syntax error: missing ';'
FAILED
